[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --doctest-modules
    --cov aws_secretsmanager_caching
    --cov-fail-under 90
    --cov-report term-missing
    --ignore doc/

[aliases]
test=pytest

[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 127
select = C,E,F,W,B
# C812, W503 clash with black
ignore = C812,W503
exclude = venv,.venv,.tox,dist,doc,build,*.egg
